--- a/6/namespace/index.html
+++ b/6/namespace/index.html
@@ -81,7 +81,7 @@
           <a class="nav-link p-2" aria-current="true" href="/6/installing.html" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" aria-current="true" href="/6/rep.html" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">REPL</a>
+          <a class="nav-link p-2" aria-current="true" href="/6/repl.html" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">REPL</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" aria-current="true" href="/6/change-log.html" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Change Log');">Change Log</a>
