deploy: 20483d36633f9936833b92f56d07cdec1843fa0c

--- a/6/functions.html
+++ b/6/functions.html
@@ -152,106 +152,116 @@
 </nav>
 
 <div id="outerContainer" class="container-xxl my-md-4 bd-layout"><aside class="bd-sidebar">
-    <nav class="collapse bd-links" id="bd-docs-nav" aria-label="Docs navigation">
-        <ul class="list-unstyled mb-0 py-3 pt-md-1" id="mainToc">
-            <li class="mb-1">
-                <strong>
-                    Getting started
-                </strong>
+  <nav class="collapse bd-links" id="bd-docs-nav" aria-label="Docs navigation">
+    <ul class="list-unstyled mb-0 py-3 pt-md-1" id="mainToc">
+      <li class="mb-1">
+        <strong>
+          Getting started
+        </strong>
 
-                <ul class="list-unstyled fw-normal pb-1 small">
-                    <li><a href="/6/" class="d-inline-flex align-items-center rounded" aria-current="page">Introduction</a></li>
-                    <li><a href="/6/installing.html" class="d-inline-flex align-items-center rounded">Download</a>
-                    </li>
-                    <li><a href="/6/change-log.html" class="d-inline-flex align-items-center rounded" aria-current="page">Change Log</a></li>
-                    <li><a href="/6/datetime.html" class="d-inline-flex align-items-center rounded" aria-current="page">DateTime</a></li>
-                    <li><a href="/6/locale.html" class="d-inline-flex align-items-center rounded" aria-current="page">Locales</a></li><li>
-                    <a href="/6/migration.html" class="d-inline-flex align-items-center rounded">
-                        Migration
-                    </a>
-                </li>
-                </ul>
-            </li>
-            <li class="mb-1">
-                <strong>
-                    Options
-                </strong>
-
-                <ul class="list-unstyled fw-normal pb-1 small">
-                    <li><a href="/6/options/" class="d-inline-flex align-items-center rounded">Overview</a>
-                    </li>
-                    <li><a href="/6/options/restrictions.html" class="d-inline-flex align-items-center rounded">Restrictions</a></li>
-                    <li><a href="/6/options/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
-                    <li><a href="/6/options/localization.html" class="d-inline-flex align-items-center rounded">Localization</a></li>
-                </ul>
-            </li>
-            <li class="mb-1">
-                <strong>
-                    Functions
-                </strong>
-
-                <ul class="list-unstyled fw-normal pb-1 small">
-                    <li><a href="/6/functions/" class="d-inline-flex align-items-center rounded">Overview</a>
-                    </li>
-                    <li><a href="/6/functions/dates.html" class="d-inline-flex align-items-center rounded">Dates</a></li>
-                    <li><a href="/6/functions/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
-                </ul>
-            </li>
-            <li class="mb-1">
-                <strong>
-                    Namespace
-                </strong>
-
-                <ul class="list-unstyled fw-normal pb-1 small">
-                    <li><a href="/6/namespace/" class="d-inline-flex align-items-center rounded">Overview</a>
-                    </li>
-                    <li><a href="/6/namespace/css.html" class="d-inline-flex align-items-center rounded">CSS</a></li>
-                    <li><a href="/6/namespace/errors.html" class="d-inline-flex align-items-center rounded">Errors</a>
-                    </li>
-                    <li><a href="/6/namespace/events.html" class="d-inline-flex align-items-center rounded">Events</a>
-                    </li>
-                    <li><a href="/6/namespace/unit.html" class="d-inline-flex align-items-center rounded">Unit</a></li>
-                </ul>
-            </li>
-
-            <li class="mb-1">
-                <strong>
-                    Plugins
-                </strong>
-
-                <ul class="list-unstyled fw-normal pb-1 small">
-                    <li><a href="/6/plugins/" class="d-inline-flex align-items-center rounded">Overview</a>
-                    </li>
-                    <li><a href="/6/plugins/fa5.html" class="d-inline-flex align-items-center rounded">Font Awesome
-                        5</a></li>
-                    <li><a href="/6/plugins/paint.html" class="d-inline-flex align-items-center rounded">Paint (Custom
-                        classes)</a></li>
-                    <li><a href="/6/plugins/moment.html" class="d-inline-flex align-items-center rounded">Momentjs</a>
-                    </li>
-                </ul>
-            </li>
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li><a href="/6/" class="d-inline-flex align-items-center rounded" aria-current="page">Introduction</a></li>
+          <li><a href="/6/installing.html" class="d-inline-flex align-items-center rounded">Download</a>
+          </li>
+          <li><a href="/6/change-log.html" class="d-inline-flex align-items-center rounded" aria-current="page">Change Log</a></li>
+          <li><a href="/6/datetime.html" class="d-inline-flex align-items-center rounded" aria-current="page">DateTime</a></li>
+          <li><a href="/6/locale.html" class="d-inline-flex align-items-center rounded" aria-current="page">Locales</a></li>
+          <li>
+            <a href="/6/migration.html" class="d-inline-flex align-items-center rounded">
+              Migration
+            </a>
+          </li>
         </ul>
-    </nav>
+      </li>
+      <li class="mb-1">
+        <strong>
+          Options
+        </strong>
+
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li><a href="/6/options/" class="d-inline-flex align-items-center rounded">Overview</a>
+          </li>
+          <li><a href="/6/options/restrictions.html" class="d-inline-flex align-items-center rounded">Restrictions</a>
+          </li>
+          <li><a href="/6/options/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
+          <li><a href="/6/options/localization.html" class="d-inline-flex align-items-center rounded">Localization</a>
+          </li>
+        </ul>
+      </li>
+      <li class="mb-1">
+        <strong>
+          Functions
+        </strong>
+
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li><a href="/6/functions/" class="d-inline-flex align-items-center rounded">Overview</a>
+          </li>
+          <li><a href="/6/functions/dates.html" class="d-inline-flex align-items-center rounded">Dates</a></li>
+          <li><a href="/6/functions/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
+        </ul>
+      </li>
+      <li class="mb-1">
+        <strong>
+          Namespace
+        </strong>
+
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li><a href="/6/namespace/" class="d-inline-flex align-items-center rounded">Overview</a>
+          </li>
+          <li><a href="/6/namespace/css.html" class="d-inline-flex align-items-center rounded">CSS</a></li>
+          <li><a href="/6/namespace/errors.html" class="d-inline-flex align-items-center rounded">Errors</a>
+          </li>
+          <li><a href="/6/namespace/events.html" class="d-inline-flex align-items-center rounded">Events</a>
+          </li>
+          <li><a href="/6/namespace/unit.html" class="d-inline-flex align-items-center rounded">Unit</a></li>
+        </ul>
+      </li>
+
+      <li class="mb-1">
+        <strong>
+          Plugins
+        </strong>
+
+        <ul class="list-unstyled fw-normal pb-1 small">
+          <li><a href="/6/plugins/" class="d-inline-flex align-items-center rounded">Overview</a>
+          </li>
+          <li><a href="/6/plugins/customDateFormat.html" class="d-inline-flex align-items-center rounded">Custom Date
+            Formats</a>
+          </li>
+          <li><a href="/6/plugins/fa5.html" class="d-inline-flex align-items-center rounded">Font Awesome
+            5</a></li>
+          <li><a href="/6/plugins/paint.html" class="d-inline-flex align-items-center rounded">Paint (Custom
+            classes)</a></li>
+          <li><a href="/6/plugins/moment.html" class="d-inline-flex align-items-center rounded">Momentjs</a>
+          </li>
+          <li><a href="/6/plugins/floating-ui.html" class="d-inline-flex align-items-center rounded">Floating UI</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 
 </aside>
 <main class="bd-main order-1">
-    <div class="bd-intro ps-lg-4">
-        <div class="d-md-flex align-items-center justify-content-between">
-            <h1 class="bd-title title" id="content">Functions</h1>
-        </div>
+  <div class="bd-intro ps-lg-4">
+    <div class="d-md-flex align-items-center justify-content-between">
+      <h1 class="bd-title title" id="content">Functions</h1>
     </div>
-    <div class="bd-toc mt-3 mb-5 my-lg-0 ps-xl-3 mb-lg-5 text-muted d-none" id="tocContainer">
-        <button class="btn btn-link link-dark p-md-0 mb-2 mb-md-0 text-decoration-none bd-toc-toggle d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#tocContents" aria-expanded="false" aria-controls="tocContents">
-            On this page
-            <svg class="bi d-md-none ms-2" aria-hidden="true"><use xlink:href="#chevron-expand"></use></svg>
-        </button>
-        <strong class="d-none d-md-block h6 my-2">On this page</strong>
-        <hr class="d-none d-md-block my-2">
-        <div class="collapse bd-toc-collapse" id="tocContents">
+  </div>
+  <div class="bd-toc mt-3 mb-5 my-lg-0 ps-xl-3 mb-lg-5 text-muted d-none" id="tocContainer">
+    <button class="btn btn-link link-dark p-md-0 mb-2 mb-md-0 text-decoration-none bd-toc-toggle d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#tocContents" aria-expanded="false" aria-controls="tocContents">
+      On this page
+      <svg class="bi d-md-none ms-2" aria-hidden="true">
+        <use xlink:href="#chevron-expand"></use>
+      </svg>
+    </button>
+    <strong class="d-none d-md-block h6 my-2">On this page</strong>
+    <hr class="d-none d-md-block my-2">
+    <div class="collapse bd-toc-collapse" id="tocContents">
 
-        </div>
     </div>
-    <div id="mainContent" class="bd-content ps-lg-4">
+  </div>
+  <div id="mainContent" class="bd-content ps-lg-4">
     <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/functions">
     <link rel="canonical" href="https://getdatepicker.com/6/functions">
 
@@ -276,7 +286,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.0.0-beta10-alpha1.</li>
+          <li class="mb-2">Currently v6.1.2</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
