--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>
         </div>
         <p class="text-muted mb-0">
-          Currently <strong>v6.0.0-beta10</strong>
+          Currently <strong>v6.1.2</strong>
           <span class="px-1">·</span>
           <a href="https://getdatepicker.com/5-4/" class="link-secondary">v5 docs</a>
         </p>
@@ -285,7 +285,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.0.0-beta10-alpha1.</li>
+          <li class="mb-2">Currently v6.1.2</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
