--- a/6/change-log.html
+++ b/6/change-log.html
@@ -266,6 +266,23 @@
     <h1>Version 6</h1>
 
     <div class="row">
+      <h2>6.2.4</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fix misspelling #2667</li>
+        <li>Fix issue with customFormatPlugin</li>
+      </ul>
+    </div>
+
+    <div class="row">
+      <h2>6.2.3</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fix popper reference</li>
+      </ul>
+    </div>
+
+    <div class="row">
       <h2>6.2.1</h2>
       <h3>New</h3>
       <ul>
@@ -320,7 +337,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.1.3</li>
+          <li class="mb-2">Currently v6.2.4</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
