deploy: 3868ddf206c19d3027a958c7e69d90ca9bc07ee1

--- a/6/change-log.html
+++ b/6/change-log.html
@@ -266,6 +266,17 @@
     <h1>Version 6</h1>
 
     <div class="row">
+      <h2>6.2.5</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Added Polish localization #2673
+        </li>
+        <li>Updated locales to include formats</li>
+        <li>Export (re-export?) Options interface</li>
+      </ul>
+    </div>
+
+    <div class="row">
       <h2>6.2.4</h2>
       <h3>Bug fixes</h3>
       <ul>
@@ -337,7 +348,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.4</li>
+          <li class="mb-2">Currently v6.2.5</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
