--- a/6/change-log.html
+++ b/6/change-log.html
@@ -266,6 +266,19 @@
     <h1>Version 6</h1>
 
     <div class="row">
+      <h2>6.2.6</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
+        <li>Fixed view date syncing across options and not updating correctly #2611</li>
+      </ul>
+      <h3>New</h3>
+      <ul>
+
+      </ul>
+    </div>
+
+    <div class="row">
       <h2>6.2.5</h2>
       <h3>New</h3>
       <ul>
@@ -348,7 +361,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.5</li>
+          <li class="mb-2">Currently v6.2.6</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
