--- a/6/functions/dates.html
+++ b/6/functions/dates.html
@@ -288,12 +288,13 @@
   </div>
 
   <div class="row">
-    <h2 id="viewDate">Getting the View Date
+    <h2 id="viewDate">View Date
       <a class="anchor-link" aria-label="Anchor" href="#viewDate"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
     </h2>
     <p>
       <code>picker.viewDate</code> returns the pickers current view date.
     </p>
+    <p><code>picker.viewDate = DateTime</code> will set the view date, update the options and ask the view to refresh.</p>
   </div>
   <div class="row mb-3">
     <h2>picker.dates</h2>
@@ -460,7 +461,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.5</li>
+          <li class="mb-2">Currently v6.2.6</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
