fixing url references

--- a/4/theme/base.html
+++ b/4/theme/base.html
@@ -1,4 +1,4 @@
-﻿﻿﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -63,7 +63,7 @@
         <div class="col-md-8" role="main">
             <div class="alert alert-danger" style="font-size:1.5em;">
                 <strong>Important!</strong>
-                Please read this <a href="https://eonasdan.com/posts/state-of-my-picker" target="_blank">blog post</a>
+                Please read this <a href="https://jonathanpeterson.com/posts/state-of-my-picker" target="_blank">blog post</a>
             </div>
             {% include "content.html" %}
         </div>
