--- a/5-3/Options/index.html
+++ b/5-3/Options/index.html
@@ -187,7 +187,7 @@
             <div class="col-md-9" role="main">
                 <div class="alert alert-danger" style="font-size:1.5em;">
                     <strong>Important!</strong>
-                    Please read this <a href="https://eonasdan.com/state-of-my-picker" target="_blank">blog post</a>
+                    Please read this <a href="https://jonathanpeterson.com/posts/state-of-my-picker.html" target="_blank">blog post</a>
                 </div>
                 
 
