--- a/5-4/theme/base.html
+++ b/5-4/theme/base.html
@@ -56,7 +56,7 @@
     {% include "nav.html" %}
 <div class="alert alert-danger" style="font-size:1.5em;">
     <strong>Important!</strong>
-    Please read this <a href="https://eonasdan.com/state-of-my-picker" target="_blank">blog post</a>.<br/>
+    Please read this <a href="https://jonathanpeterson.com/posts/state-of-my-picker.html" target="_blank">blog post</a>.<br/>
     The Tempus Dominus projects are getting rolled back into the <a href="https://github.com/Eonasdan/tempus-dominus">orginal repo</a>. TD Bootstrap 3/4 are no longer supported.
 </div>
 
