--- a/6/examples/jquery.html
+++ b/6/examples/jquery.html
@@ -84,7 +84,7 @@
           <a class="nav-link p-2" aria-current="true" href="/6/change-log.html" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Change Log');">Change Log</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://eonasdan.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');" target="_blank" rel="noopener">Blog</a>
+          <a class="nav-link p-2" href="https://jonathanpeterson.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');" target="_blank" rel="noopener">Blog</a>
         </li>
       </ul>
 
@@ -376,7 +376,7 @@
           <span class="fs-5">Tempus Dominus</span>
         </a>
         <ul class="list-unstyled small text-muted">
-          <li class="mb-2">Created by the <a href="https://eonasdan.com">Eonasdan (Jonathan Peterson)</a> with the help
+          <li class="mb-2">Created by the <a href="https://jonathanpeterson.com">Eonasdan (Jonathan Peterson)</a> with the help
             of <a href="https://github.com/Eonasdan/tempus-dominus/graphs/contributors">our contributors</a>.
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
@@ -389,7 +389,7 @@
         <ul class="list-unstyled">
           <li class="mb-2"><a href="/">Home</a></li>
           <li class="mb-2"><a href="/docs/6/">Docs</a></li>
-          <li class="mb-2"><a href="https://eonasdan.com">Blog</a></li>
+          <li class="mb-2"><a href="https://jonathanpeterson.com">Blog</a></li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 mb-3">
