--- a/5-3/ContributorsGuide/index.html
+++ b/5-3/ContributorsGuide/index.html
@@ -299,24 +299,25 @@ The component uses on <code>jQuery</code>, <code>moment.js</code> libraries.</p>
         </div>
     </div>
 </div>
-    <script>
-        if (top !== self) { top.location.replace(self.location.href); }
-        if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] ||
-                    function () {
-                        (i[r].q = i[r].q || []).push(arguments);
-                    }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script defer="">
+        kofiWidgetOverlay.draw('eonasdan', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support me',
+            'floating-chat.donateButton.background-color': '#323842',
+            'floating-chat.donateButton.text-color': '#fff'
+        });
+    </script>
 
-            ga('create', 'UA-47462200-1', 'eonasdan.github.io');
-            ga('send', 'pageview');
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CL5K7E80FB"></script>
+    <script>
+        if (location.hostname === 'getdatepicker.com') {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-CL5K7E80FB');
         }
     </script>
     </body>
